--- a/css/scene-01.css
+++ b/css/scene-01.css
@@ -1,10 +1,32 @@
 .section-01 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  position: relative;
+
+  height: 100%;
   min-height: 800px;
   min-width: 100%;
   height: 100vh;
-  background-image: url('../images/01/bg.jpg');
-  background-size: cover;
-  position: relative;
+}
+
+.section-01 .section-content {
+  overflow-x: hidden;
+  position: absolute;
+  width: 100%;
+  height: 800px;
+
+  background: url('../images/01/bg.jpg');
+}
+
+.virus-images {
+  position: inherit;
+  width: 100%;
+  height: 600px;
+  top: 100px;
+  left: 0;
 }
 
 .section-01 h1 {
